Fixed spacing in code snippets and some typos

--- a/views/presentation.ejs
+++ b/views/presentation.ejs
@@ -25,31 +25,26 @@
 				<li class="fragment fade-up"><q>"love what you're doing with Redux"</q></li>
 			</ol>
 		</section>
-	<% include es6-primer %>
-	<% include functional-programming %>
-	<% include immutablejs %>
-	<% include redux %>
-	<section id="references" data-background="img/web-surfing-time.gif">
-		<h3>References</h3>
-		<div style="padding:20px;background-color:rgba(0,0,0,0.8);border-radius:20px;">
-			<ul>
-				<li><a href="https://groups.csail.mit.edu/medg/people/psz/Licklider.html">Man-Computer Symbiosis</a></li>
-				<li><a href="https://facebook.github.io/immutable-js/">Immutable.js Homepage (d'uh)</a></li>
-				<li><a href="http://redux.js.org/">Redux Homepage (double d'uh)</a></li>
-				<li><a href="https://auth0.com/blog/intro-to-immutable-js/">Introduction to Immutable.js and Functional Programming Concepts</a></li>
-				<li><a href="https://medium.com/@dtinth/immutable-js-persistent-data-structures-and-structural-sharing-6d163fbd73d2">Immutable.js, persistent data structures and structural sharing</a></li>
-				<li><a href="http://redux.js.org/docs/recipes/UsingImmutableJS.html">Using Immutable.JS with Redux</a></li>
-				<li><a href="https://www.slideshare.net/mohitthatte/a-deep-dive-into-clojures-data-structures-euroclojure-2015">A Deep Dive inot Clojure's Data Structures</a></li>
-				<li><a href="https://github.com/acdlite/flux-standard-action">Flux standard action</a></li>
-				<li><a href="https://www.amazon.com/Developing-Redux-Edge-Johannes-Lumpe/dp/1939902460/ref=sr_1_1?ie=UTF8&qid=1502482368&sr=8-1&keywords=Developing+a+Redux+Edge">Developing a Redux Edge (book)</a></li>
-				<li><a href="https://stackoverflow.com/a/32920459">Why use redux over flux?</a></li>
-			</ul>
-		</div>
-	</section>
-	<section id="credits" data-markdown>
-		### Credits
-		- [Reveal.js](https://github.com/hakimel/reveal.js/)
-		- [GIPHY](https://giphy.com/)
-	</section>
+		<% include es6-primer %>
+		<% include functional-programming %>
+		<% include immutablejs %>
+		<% include redux %>
+		<section id="references" data-background="img/web-surfing-time.gif">
+			<h3>References</h3>
+			<div style="padding:20px;background-color:rgba(0,0,0,0.8);border-radius:20px;">
+				<ul>
+					<li><a href="https://groups.csail.mit.edu/medg/people/psz/Licklider.html">Man-Computer Symbiosis</a></li>
+					<li><a href="https://facebook.github.io/immutable-js/">Immutable.js Homepage (d'uh)</a></li>
+					<li><a href="http://redux.js.org/">Redux Homepage (double d'uh)</a></li>
+					<li><a href="https://auth0.com/blog/intro-to-immutable-js/">Introduction to Immutable.js and Functional Programming Concepts</a></li>
+					<li><a href="https://medium.com/@dtinth/immutable-js-persistent-data-structures-and-structural-sharing-6d163fbd73d2">Immutable.js, persistent data structures and structural sharing</a></li>
+					<li><a href="http://redux.js.org/docs/recipes/UsingImmutableJS.html">Using Immutable.JS with Redux</a></li>
+					<li><a href="https://www.slideshare.net/mohitthatte/a-deep-dive-into-clojures-data-structures-euroclojure-2015">A Deep Dive into Clojure's Data Structures</a></li>
+					<li><a href="https://github.com/acdlite/flux-standard-action">Flux standard action</a></li>
+					<li><a href="https://www.amazon.com/Developing-Redux-Edge-Johannes-Lumpe/dp/1939902460/ref=sr_1_1?ie=UTF8&qid=1502482368&sr=8-1&keywords=Developing+a+Redux+Edge">Developing a Redux Edge (book)</a></li>
+					<li><a href="https://stackoverflow.com/a/32920459">Why use redux over flux?</a></li>
+				</ul>
+			</div>
+		</section>
 	</div>
 </div>
