Changed some slide titles and added some titles

--- a/views/es6-primer.ejs
+++ b/views/es6-primer.ejs
@@ -1,5 +1,5 @@
 <section id="es6-primer">
-    <section data-markdown>
+    <section id="es6-primer-overview" data-markdown>
         ### ES6 Primer
         - Object shorthand property names
         - Destructuring assignment
