--- a/views/functional-programming.ejs
+++ b/views/functional-programming.ejs
@@ -8,7 +8,7 @@
         - puri-**TEE**
 
     </section>
-    <section id="composabili-tee" >
+    <section id="composability" >
         <h2>Composability</h2>
         <blockquote>
             Build functions with functions
@@ -30,10 +30,10 @@ let isNumberLike = flow(toNumber, negate(isNaN));
             </code></pre>
         </div>
     </section>
-    <section style="margin: 0 25%;">
+    <section id="modularity" style="margin: 0 25%;">
          <div class="tumblr-post" data-href="https://embed.tumblr.com/embed/post/dcJpVAvYGPYFZ1ntlGckfg/149273556583" data-did="da39a3ee5e6b4b0d3255bfef95601890afd80709"><a href="https://jhwohlgemuth.tumblr.com/post/149273556583">https://jhwohlgemuth.tumblr.com/post/149273556583</a></div>  <script async src="https://assets.tumblr.com/post.js"></script>
     </section>
-    <section id="immutabili-tee">
+    <section id="immutability">
         <h2>Immutability</h2>
         <blockquote>
             Favor immutable patterns
@@ -55,7 +55,7 @@ console.log(oldArr);// [1, 2, 3, 4, 5]
 console.log(newArr);// [1, 2, 3, 4, 5, 6]
         </code></pre>
     </section>
-    <section id="immutabili-tee-loops">
+    <section id="immutability-loops">
         <h2>Immutability</h2>
         <blockquote>
             Favor immutable patterns
@@ -79,10 +79,10 @@ console.log(newNums);// [2, 3, 4, 5, 6]
         </code></pre>
         <aside class="notes">I had to look up how to use for blocks to write the first snippet</aside>
     </section>
-    <section id="immutabili-tee-immutablejs" data-background-iframe="https://facebook.github.io/immutable-js/">
+    <section id="immutability-immutablejs" data-background-iframe="https://facebook.github.io/immutable-js/">
         <span style="color: black;">...more on this later.</span>
     </section>
-    <section id="puri-tee">
+    <section id="purity">
         <h2>Purity</h2>
         <blockquote>
             Find balance between arity and state
@@ -105,10 +105,10 @@ triggerFooNotPure();
 triggerFooPure(obj);
         </code></pre>
     </section>
-    <section id="puri-tee-redux" data-background-iframe="http://redux.js.org/">
+    <section id="purity-redux" data-background-iframe="http://redux.js.org/">
         <span style="color: black; background-color: rgba(255, 255, 255, 0.9);padding: 10px;border-radius: 10px;">...more on this later.</span>
     </section>
-    <section style="margin: 0 25%; transform: scale(1.1);">
+    <section id="fp-cheatsheet" style="margin: 0 25%; transform: scale(1.1);">
         <blockquote class="twitter-tweet" data-lang="en">
             <p lang="en" dir="ltr">JS Functional Programming Array.prototype cheat sheet <a href="https://t.co/diGW4FaOso">pic.twitter.com/diGW4FaOso</a></p>&mdash; Jason Wohlgemuth (@jhwohlgemuth) <a href="https://twitter.com/jhwohlgemuth/status/862812187282296833">May 11, 2017</a>
         </blockquote>
