More indent and slide rename

--- a/views/redux.ejs
+++ b/views/redux.ejs
@@ -49,7 +49,7 @@
             <li class="fragment">Enhance via <b>composition</b></li>
         </ul>
     </section>
-    <section id="store">
+    <section id="stores">
         <h3>stores</h3>
         <blockquote>Immutable state</blockquote>
         <div>
