Tweaked other other words

--- a/views/redux.ejs
+++ b/views/redux.ejs
@@ -36,7 +36,7 @@
     <section id="redux-three-principles-in-other-words">
         <h3>In other words...</h3>
         <ul>
-            <li class="fragment">Manage state in <b>stores</b></li>
+            <li class="fragment">Maintain state in <b>stores</b></li>
             <li class="fragment">Communicate state changes with <b>actions</b></li>
             <li class="fragment">Transform state with <b>reducers</b></li>
         </ul>
@@ -44,9 +44,9 @@
     <section id="redux-three-principles-in-other-other-words">
         <h3>In other other words...</h3>
         <ul>
-            <li class="fragment">State is <b>immutable</b></li>
-            <li class="fragment">Reducers are <b>pure</b></li>
-            <li class="fragment">Enhance via <b>composition</b></li>
+            <li class="fragment">Actions are <a href="https://github.com/lodash/lodash/blob/master/isPlainObject.js"><b>plain objects</b></a></li>
+            <li class="fragment">Reducers are <a href="https://trees-sharing-and-state.herokuapp.com/#/purity"><b>pure functions</b></a></li>
+            <li class="fragment">Action + Reducer = "State change"</li>
         </ul>
     </section>
     <section id="stores">
