--- a/views/immutablejs.ejs
+++ b/views/immutablejs.ejs
@@ -81,6 +81,8 @@
             - pull requests
             - mention flow and typescript
             - contributing guide
+
+            Open console on immutable.js site to see API
         </aside>
     </section>
     <section id="immutable-JS">
