--- a/views/functional-programming.ejs
+++ b/views/functional-programming.ejs
@@ -105,7 +105,7 @@
     triggerFooPure(obj);
         </code></pre>
     </section>
-    <section id="purity-redux" data-background-iframe="https://redux.js.org/">
+    <section id="purity-redux" data-background="img/redux-js-org.png">
         <span style="color: black; background-color: rgba(255, 255, 255, 0.9);padding: 10px;border-radius: 10px;">...more on this later.</span>
     </section>
     <section id="fp-cheatsheet" style="margin: 0 25%; transform: scale(1.1);">
